2025-05-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/date_datetime/newDateVector.h: Add default
	constructor
	* inst/include/Rcpp/date_datetime/newDatetimeVector.h: Idem

2025-05-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* R/Attributes.R: Support C++26 via plugin

2025-05-05  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_sugar.R: Condition four NA-related tests away on
	arm64 on Linux too

	* .github/workflows/linuxarm.yaml (jobs): Add ubuntu-24.04-arm as
	optional workflow_dispatch run

2025-04-15  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci-4.4/Dockerfile: Added based on r-base:4.4.3
	* .github/workflows/ci.yaml (jobs): Add rcpp/ci-4.4 to matrix

2025-03-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

2025-03-29 Iñaki Ucar <iucar@fedoraproject.org>

	* inst/include/Rcpp/traits/result_of.h: Reimplement traits::result_of using
	std::result_of (up to C++14) or std::invoke_result (C++17 or later), which
	supports previous use cases and enables lambdas
	* inst/include/Rcpp/sugar/functions/sapply.h: Use new result_of interface
	* inst/include/Rcpp/sugar/functions/lapply.h: Idem
	* inst/include/Rcpp/sugar/functions/mapply/mapply_2.h: Idem
	* inst/include/Rcpp/sugar/functions/mapply/mapply_3.h: Idem
	* inst/include/Rcpp/sugar/matrix/outer.h: Idem
	* inst/tinytest/cpp/sugar.cpp: New tests for previous sugar functions
	* inst/tinytest/test_sugar.R: Idem

2025-03-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

2025-03-26 Iñaki Ucar <iucar@fedoraproject.org>

	* inst/include/Rcpp/platform/compiler.h: Remove definitions of
	RCPP_USING_UNORDERED_MAP and RCPP_USING_UNORDERED_SET
	* inst/include/Rcpp/sugar/sets.h: Remove redefinition of macros